# pytrec_eval

./: Makefile  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml  push.yml  style.yml
py/: __init__.py
src/: pytrec_eval.cpp
tests/: pytrec_eval_tests.py
